# excel-cli

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  EXAMPLES.md  FILTER_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SCHEMA_GUIDE.md  SQL_DEMO.md  SQL_EXPORT_GUIDE.md  create_test_data.py
.github/workflows/: ci.yml  release.yml
docs/: TEMPLATE_GUIDE.md  UPDATE_UPSERT_GUIDE.md
src/: error.rs  filter.rs  lib.rs  main.rs  models.rs  reader.rs  schema.rs
src/exporter/: csv.rs  json.rs  mod.rs  sql.rs  template.rs
templates/: html_table.tera  markdown_table.tera  xml.tera  yaml.tera
tests/: create_test_excel.py
