[package]
name = "excel-cli"
version = "0.4.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool to convert Excel files to various formats (JSON, CSV, SQL, HTML, Markdown, XML, YAML) with UPDATE/UPSERT support, template engine, data filtering and schema generation"
license = "MIT"
repository = "https://github.com/yourusername/excel-cli"

[[bin]]
name = "excel-cli"
path = "src/main.rs"

[dependencies]
# CLI 参数解析
clap = { version = "4.5", features = ["derive"] }

# Excel 文件读取
calamine = "0.25"

# 序列化和反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV 处理
csv = "1.3"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 模板引擎
tera = "1.19"

# 命令行表格显示
comfy-table = "7.1"

[dev-dependencies]
tempfile = "3.10"
